@@ -55,6 +55,16 @@ for the new 1.5 language features in the compiler is being worked on.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>June 6, 2006</b>
+</td><td>
+RMS approved the plan to use the Eclipse compiler as the new gcj front
+end.  Work is being done on the <code>gcj-eclipse</code> branch; it
+can already build libgcj.  This project will allow us to ship a 1.5
+compiler in the relatively near future.  The old <code>gcjx</code>
+branch and project is now dead.
+</td></tr>
+
+<tr><td valign="top">
 <b>May 20, 2006</b>
 </td><td>
 John David Anglin and Andreas Tobler checked in a <a
