@@ -1,3 +1,7 @@
+2006-06-06  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: News about ecj.
+
 2006-05-20  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* index.html: Add a news entry about the HP-UX PA 32-bit port.
